--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ div {
 </style>
 <body>
 <h1>Expness Tracker</h1>
+    <div>
 <form action = "">
 <label for = "ename">Expense Name:</label>
 <input type = "text" id= "ename" name="fname"><br><br>
@@ -33,6 +34,6 @@ div {
 <input type="submit" value="Submit">
 
 </form>
-   
+    </div> 
 </body>
 </html>
