--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 </head>
     <style>
 div {
-  height: 400px;
-  width: 30%;
-  background-color: powderblue;
+    display:flex;
+    flex-direction:column;
+    max-width:1440px;
+    margin: 0 auto;
+    height: 100vh;
+  
 }
 </style>
 <body>
